chore: Update video container styling for lazy loading and responsive design

--- a/views/watch.hbs
+++ b/views/watch.hbs
@@ -15,8 +15,9 @@
         margin: 0 auto;
       }
       .video-container video {
-        width: 100%;
+        width: fit-content;
         height: auto;
+        max-height: 600px;
         border-radius: 10px;
       }
     </style>
