--- a/views/login.hbs
+++ b/views/login.hbs
@@ -11,7 +11,7 @@
     <h2 class="text-4xl font-semibold mb-6 text-center text-gray-100">Login</h2>
     
     <div class="mb-4">
-      <label for="username" class="block text-gray-200 font-semibold mb-2">Username:</label>
+      <label for="username" class="block text-gray-200 font-semibold mb-2">Username / Email:</label>
       <input type="text" id="username" name="username" required class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-400" />
     </div>
     
