--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,10 +5,10 @@
   {{/content}}
 
   {{#content "body" }}
-  <div class="p-4 py-8 text-center justify-center min-h-screen items-center flex flex-col">
-    <h1 class="text-6xl text-orange-400 font-bold">Nelfix</h1>
-    <h3 class="text-2xl text-orange-600 font-bold">Selamat datang di Nelfix</h3>
-    <p class="text-lg text-gray-200">Silahkan <a href="/login" class="text-blue-400">login</a> atau <a href="/register" class="text-blue-400">register</a> untuk menikmati layanan kami</p>
+  <div class="p-4 py-8 text-center justify-center min-h-lvh items-center flex flex-col gap-2">
+    <h1 class="text-8xl text-orange-400 font-bold drop-shadow-xl">Nelfix</h1>
+    <h2 class="text-2xl text-orange-600 font-bold">Selamat datang di Nelfix</h2>
+    <h3 class="text-lg font-semibold text-gray-200">Silahkan <a href="/login" class="text-yellow-400 hover:underline hover:underline-offset-8">login</a> atau <a href="/register" class="text-yellow-400 hover:underline hover:underline-offset-8">register</a> untuk menikmati layanan kami</h3>
   </div>
   {{/content}}
 
