--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,6 +4,9 @@
     {{#block "head"}}
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Nelfix | Nonton Film Online | Neflix Alternatif">
+        <meta name="keywords" content="nelfix, nonton film, nonton film online, nonton film gratis, nonton film terbaru, nonton film terlengkap">
+        <meta lang="id">
         <link rel="stylesheet" href="/css/output.css">
         <script src="/js/main.js" defer></script>
     {{/block}}
@@ -13,7 +16,7 @@
     {{> navbar}}
 
     <!-- Konten Utama -->
-    <div class="min-h-screen bg-blue-900">
+    <div class="min-h-screen bg-violet-900">
         {{#block "body"}}
             <p>ini isi blok body</p>
         {{/block}}
