--- a/views/login.hbs
+++ b/views/login.hbs
@@ -7,8 +7,8 @@
 
   {{#content "body" }}
   <div class="p-4 py-8 text-center justify-center min-h-screen items-center flex flex-col">
-    <form id="loginForm" action="/login" method="POST" class="max-w-2xl mx-auto bg-gray-900 p-8 rounded-lg shadow-md md:w-96">
-    <h2 class="text-4xl font-semibold mb-6 text-center text-gray-100">Login</h2>
+    <form id="loginForm" action="/login" method="POST" class="max-w-2xl mx-auto bg-zinc-900 p-8 rounded-lg shadow-md md:w-96">
+    <h2 class="text-4xl font-bold mb-6 text-center text-gray-50">Login</h2>
     
     <div class="mb-4">
       <label for="username" class="block text-gray-200 font-semibold mb-2">Username / Email:</label>
@@ -21,11 +21,11 @@
     </div>
     
     <div class="mb-4">
-      <p class="text-gray-300 text-sm">Tidak memiliki akun? <a href="/register" class="text-blue-400">Register di sini</a></p>
-      <p class="text-gray-300 text-sm">Kamu seorang admin? <a href="https://labpro-fe.hmif.dev/" class="text-blue-400">Login di sini</a></p>
+      <p class="text-gray-300 text-sm">Tidak memiliki akun? <a href="/register" class="text-amber-400 hover:underline hover:text-amber-600 hover:underline-offset-2">Register di sini</a></p>
+      <p class="text-gray-300 text-sm">Kamu seorang admin? <a href="https://labpro-fe.hmif.dev/" class="text-amber-400 hover:underline hover:text-amber-600 hover:underline-offset-2">Login di sini</a></p>
     </div>
 
-    <button type="submit" class="w-full bg-blue-500 text-white font-semibold py-2 px-4 rounded hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400">
+    <button type="submit" class="w-full bg-amber-600 text-white font-semibold py-2 px-4 rounded hover:bg-amber-700 focus:outline-none focus:ring-2 focus:ring-yellow-400">
       Login
     </button>
 
