--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,7 +16,7 @@
     {{> navbar}}
 
     <!-- Konten Utama -->
-    <div class="min-h-screen bg-violet-900">
+    <div class="bg-gradient-to-r from-purple-700 via-purple-800 to-purple-900 min-h-100vh ">
         {{#block "body"}}
             <p>ini isi blok body</p>
         {{/block}}
