chore: Update translation for empty film list message

--- a/views/owned-films.hbs
+++ b/views/owned-films.hbs
@@ -20,7 +20,7 @@
       {{> pagination pagination=pagination}}
       
     {{else}}
-      <p class="text-gray-400">You don't have any films in your list.</p>
+      <p class="text-gray-400">Kamu belum memiliki film di daftar kamu.</p>
     {{/if}}
   </div>
   {{/content}}  
